log/build_2024-09-28_12-52-50/go_to_goal/stdout_stderr.log
running egg_info
writing ../../build/go_to_goal/go_to_goal.egg-info/PKG-INFO
writing dependency_links to ../../build/go_to_goal/go_to_goal.egg-info/dependency_links.txt
writing entry points to ../../build/go_to_goal/go_to_goal.egg-info/entry_points.txt
writing requirements to ../../build/go_to_goal/go_to_goal.egg-info/requires.txt
writing top-level names to ../../build/go_to_goal/go_to_goal.egg-info/top_level.txt
reading manifest file '../../build/go_to_goal/go_to_goal.egg-info/SOURCES.txt'
adding license file 'LICENSE'
writing manifest file '../../build/go_to_goal/go_to_goal.egg-info/SOURCES.txt'
running build
running build_py
copying go_to_goal/gtg.py -> /home/mayo_poyo/ros2_ws2/build/go_to_goal/build/lib/go_to_goal
running install
running install_lib
copying /home/mayo_poyo/ros2_ws2/build/go_to_goal/build/lib/go_to_goal/gtg.py -> /home/mayo_poyo/ros2_ws2/install/go_to_goal/lib/python3.12/site-packages/go_to_goal
byte-compiling /home/mayo_poyo/ros2_ws2/install/go_to_goal/lib/python3.12/site-packages/go_to_goal/gtg.py to gtg.cpython-312.pyc
  File "/home/mayo_poyo/ros2_ws2/install/go_to_goal/lib/python3.12/site-packages/go_to_goal/gtg.py", line 20
    goal_x = int sys argv[1]
                 ^^^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/mayo_poyo/ros2_ws2/install/go_to_goal/lib/python3.12/site-packages/go_to_goal-0.0.0-py3.12.egg-info' (and everything under it)
Copying ../../build/go_to_goal/go_to_goal.egg-info to /home/mayo_poyo/ros2_ws2/install/go_to_goal/lib/python3.12/site-packages/go_to_goal-0.0.0-py3.12.egg-info
running install_scripts
Installing pub script to /home/mayo_poyo/ros2_ws2/install/go_to_goal/lib/go_to_goal
writing list of installed files to '/home/mayo_poyo/ros2_ws2/build/go_to_goal/install.log'
